--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 "main":"index.html",
 "user-agent":"Mozilla/5.0 (X11; Linux i686) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/29.0.1521.3 Safari/537.36",
 "window": {
-    "toolbar": false,
+    "toolbar": true,
     "width": 700,
     "height": 800,
     "position": "center",
