--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 "name":"ht5streamer",
 "main":"index.html",
-"user-agent":"Mozilla/5.0 (X11; Linux i686) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/29.0.1521.3 Safari/537.36",
+"user-agent":"Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_2_1 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8G4 Safari/6533.18.5",
 "window": {
-    "toolbar": false,
+    "toolbar": true,
     "width": 1100,
     "height": 600,
     "position": "center",
