--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 "main":"index.html",
 "user-agent":"Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_2_1 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8G4 Safari/6533.18.5",
 "window": {
-    "toolbar": true,
+    "toolbar": false,
     "width": 1100,
     "height": 600,
     "position": "center",
