--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 "name":"ht5streamer",
-"main":"index.html",
+"main":"config.html",
 "user-agent":"Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_2_1 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8G4 Safari/6533.18.5",
 "window": {
     "toolbar": false,
-    "width": 1100,
+    "width": 1280,
     "height": 600,
     "position": "center",
     "min_width": 588,
