add storage system

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 "name":"ht5streamer",
-"main":"config.html",
+"main":"playlist.html",
 "user-agent":"Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_2_1 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8G4 Safari/6533.18.5",
 "window": {
     "toolbar": true,
