--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
 "main":"config.html",
 "user-agent":"Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_2_1 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8G4 Safari/6533.18.5",
 "window": {
-    "toolbar": true,
+    "toolbar": false,
     "width": 1280,
     "height": 638,
     "position": "center",
     "min_width": 588,
     "min_height": 200,
     "title":"ht5streamer"
+  },
+  "webkit": {
+    "plugin": false
   }
 }
