--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 "user-agent":"Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_2_1 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8G4 Safari/6533.18.5",
 "window": {
     "toolbar": false,
+    "icon": "icon/icon.png",
     "width": 1280,
     "height": 638,
     "position": "center",
