--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 "main":"config.html",
 "user-agent":"Mozilla/5.0 (X11; Linux i686) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.48 Safari/537.36",
 "window": {
-    "toolbar": false,
-    "width": 1280,
+    "toolbar": true,
+    "width": 1300,
     "height": 638,
     "position": "center",
     "min_width": 588,
